--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -76,7 +76,7 @@
             <!--Notes-->
             <div th:case="'nav-notes'" th:class="${activeTab == 'nav-notes' ? 'tab-pane fade show active' : 'tab-pane fade'}" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
                 <button style="margin: 0.25em;" type="button" class="btn btn-info float-right"
-                        onclick="showNoteModal()">
+                        onclick="showNoteModal(this)">
                     + Add a New Note
                 </button>
 
@@ -90,10 +90,15 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="note : ${notes}">
+                        <tr th:each="note : ${notes}" th:id="${note.noteId}">
                             <td>
-                                <button type="button" class="btn btn-success">Edit</button>
-                                <a class="btn btn-danger">Delete</a>
+                                <button type="button" class="btn btn-success"
+                                        th:data-note-id="${note.noteId}"
+                                        th:data-note-title="${note.noteTitle}"
+                                        th:data-note-description="${note.noteDescription}"
+                                        onclick="showNoteModal(this)"
+                                >Edit</button>
+                                <a th:href="@{'/result/deleteNote/' + ${note.noteId}}" class="btn btn-danger">Delete</a>
                             </td>
                             <th th:text="${note.noteTitle}" scope="row">Example Note Title</th>
                             <td th:text="${note.noteDescription}">Example Note Description </td>
@@ -112,16 +117,16 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form action="#" method="POST">
-                                    <input type="hidden" name="noteId" id="note-id">
+                                <form action="#" method="POST" th:action="@{'/result/addNote'}" th:object="${noteModel}">
+                                    <input th:field="*{noteId}" type="hidden" name="noteId" id="note-id">
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">Title</label>
-                                        <input type="text" name="noteTitle" class="form-control" id="note-title"
+                                        <input th:field="*{noteTitle}" type="text" name="noteTitle" class="form-control" id="note-title"
                                                maxlength="20" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="note-description" class="col-form-label">Description</label>
-                                        <textarea class="form-control" name="noteDescription" id="note-description"
+                                        <textarea th:field="*{noteDescription}" class="form-control" name="noteDescription" id="note-description"
                                                   rows="5" maxlength="1000" required></textarea>
                                     </div>
                                     <button id="noteSubmit" type="submit" class="d-none"></button>
@@ -220,7 +225,10 @@
 <!--For opening the note modal-->
 <script type="text/javascript">
     // For opening the note modal
-function showNoteModal(noteId, noteTitle, noteDescription) {
+function showNoteModal(note) {
+    var noteId = note.getAttribute('data-note-id');
+    var noteTitle = note.getAttribute('data-note-title');
+    var noteDescription = note.getAttribute('data-note-description');
     document.getElementById('note-id').value = noteId ? noteId : '';
     document.getElementById('note-title').value = noteTitle ? noteTitle : '';
     document.getElementById('note-description').value = noteDescription ? noteDescription : '';
