--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -145,12 +145,12 @@
             <!--Credentials-->
             <div th:case="'nav-credentials'" th:class="${activeTab == 'nav-credentials' ? 'tab-pane fade show active' : 'tab-pane fade'}" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
                 <button style="margin: 0.25em;" type="button" class="btn btn-info float-right"
-                        onclick="showCredentialModal()">
+                        onclick="showCredentialModal(this)">
                     + Add a New Credential
                 </button>
 
                 <div class="table-responsive">
-                    <table class="table table-striped" th:object="${credentials}" id="credentialTable">
+                    <table class="table table-striped" id="credentialTable">
                         <thead>
                         <tr>
                             <th style="width: 20%" scope="col"></th>
@@ -160,14 +160,21 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
+                        <tr th:each="cred : ${credentials}" th:id="${cred.credentialId}">
                             <td>
-                                <button type="button" class="btn btn-success">Edit</button>
-                                <a class="btn btn-danger">Delete</a>
+                                <button type="button" class="btn btn-success"
+                                        th:data-cred-id="${cred.credentialId}"
+                                        th:data-cred-url="${cred.url}"
+                                        th:data-cred-username="${cred.username}"
+                                        th:data-cred-password="${cred.password}"
+                                        onclick="showCredentialModal(this)"
+                                >Edit</button>
+                                <a th:href="@{'/result/deleteCredential/' + ${cred.credentialId}}"
+                                   class="btn btn-danger">Delete</a>
                             </td>
-                            <th scope="row">Example Credential URL</th>
-                            <td>Example Credential Username</td>
-                            <td>Example Credential Password</td>
+                            <th th:text="${cred.url}" scope="row">>Example Credential URL</th>
+                            <td th:text="${cred.username}">Example Credential Username</td>
+                            <td th:text="${cred.password}">Example Credential Password</td>
                         </tr>
                         </tbody>
                     </table>
@@ -184,21 +191,22 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form action="#" method="POST">
-                                    <input type="hidden" name="credentialId" id="credential-id">
+                                <form action="#" method="POST" th:action="@{'/result/addCredential'}"
+                                    th:object="${credentialModel}">
+                                    <input th:field="*{credentialId}" type="hidden" name="credentialId" id="credential-id">
                                     <div class="form-group">
                                         <label for="credential-url" class="col-form-label">URL</label>
-                                        <input type="text" name="url" class="form-control" id="credential-url"
+                                        <input th:field="*{url}" type="text" name="url" class="form-control" id="credential-url"
                                                maxlength="100" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="credential-username" class="col-form-label">Username</label>
-                                        <input type="text" name="username" class="form-control"
+                                        <input th:field="*{username}" type="text" name="username" class="form-control"
                                                id="credential-username" maxlength="30" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="credential-password" class="col-form-label">Password</label>
-                                        <input type="text" name="password" class="form-control"
+                                        <input th:field="*{password}" type="text" name="password" class="form-control"
                                                id="credential-password" maxlength="30" required>
                                     </div>
                                     <button id="credentialSubmit" type="submit" class="d-none"></button>
@@ -245,18 +253,32 @@ function closeNoteModal() {
     document.getElementById('noteModal').removeAttribute('style');
 }
 
+        async function showCredentialModal(cred) {
+            var credentialId = cred.getAttribute('data-cred-id');
+            var url = cred.getAttribute('data-cred-url');
+            var username = cred.getAttribute('data-cred-username');
+            var password = cred.getAttribute('data-cred-password');
 
-// For opening the credentials modal
-function showCredentialModal(credentialId, url, username, password) {
-    document.getElementById('credential-id').value = credentialId ? credentialId : '';
-    document.getElementById('credential-url').value = url ? url : '';
-    document.getElementById('credential-username').value = username ? username : '';
-    document.getElementById('credential-password').value = password ? password : '';
-    document.getElementById('credentialModal').classList.add('show');
-    document.getElementById('credentialModal').setAttribute('aria-modal', 'true');
-    document.body.classList.add('modal-open');
-    document.getElementById('credentialModal').setAttribute('style', 'display: block; padding-right: 15px;');
-}
+
+            if (credentialId != null) {
+                response = await fetch('/home/decrypt?credId=' + credentialId, {
+                    method: 'GET'
+                });
+                if (response.ok) {
+                    password = await response.text();
+                    console.log('Decrypted password:', password);
+                }
+            }
+
+                document.getElementById('credential-id').value = credentialId ? credentialId : '';
+                document.getElementById('credential-url').value = url ? url : '';
+                document.getElementById('credential-username').value = username ? username : '';
+                document.getElementById('credential-password').value = password ? password : '';
+                document.getElementById('credentialModal').classList.add('show');
+                document.getElementById('credentialModal').setAttribute('aria-modal', 'true');
+                document.body.classList.add('modal-open');
+                document.getElementById('credentialModal').setAttribute('style', 'display: block; padding-right: 15px;');
+            }
 
 function closeCredentialModal() {
     document.getElementById('credentialModal').classList.remove('show');
